--- a/learnMybatis/src/main/resources/log4j.properties
+++ b/learnMybatis/src/main/resources/log4j.properties
@@ -1,4 +1,17 @@
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=DEBUG, stdout, file
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+# 添加文件输出
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file.File=logs/mybatis.log
+log4j.appender.file.MaxFileSize=5MB
+log4j.appender.file.MaxBackupIndex=10
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5p %c{1}:%L - %m%n
+# MyBatis日志配置
+log4j.logger.com.ktjiaoyu.mapper=TRACE
+log4j.logger.java.sql=DEBUG
+log4j.logger.java.sql.Statement=DEBUG
+log4j.logger.java.sql.ResultSet=DEBUG
+log4j.logger.java.sql.PreparedStatement=DEBUG
